fix(stories.scss): change background-video opacity for better text visibility

--- a/css/main.css
+++ b/css/main.css
@@ -767,7 +767,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  opacity: 0.4;
+  opacity: 0.2;
 }
 .bg-video__content {
   width: 100%;
