--- a/sass/layout/_stories.scss
+++ b/sass/layout/_stories.scss
@@ -26,7 +26,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  opacity: 0.4;
+  opacity: 0.2;
 
   &__content {
     width: 100%;
